# Desurium

./: .gitignore  CMakeLists.txt  install-deps.sh
build_win/: copy_bin.bat  desura.sln  vis_property.props
cmake/modules/: FindCEF.cmake  SetInstallPaths.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt  gcJSBase.h
src/common/browser_pipe/: IPCBrowser.cpp
src/executable/bootloader_win/: CMakeLists.txt  desura.vcxproj  desura.vcxproj.filters
src/executable/bootloader_win/code/: DesuraMain.cpp
src/executable/desura_browserhost/code/: CefBrowserLoader.cpp  CefEvents.h  CefSchemeBase.h
src/shared/cefdesura/: CMakeLists.txt
src/shared/cefdesura/code/: ChromiumBrowser.cpp  ChromiumBrowser.h  ChromiumBrowserEvents.cpp  ChromiumBrowserEvents.h  Cookie.cpp  JavaScriptContext.h  JavaScriptExtender.cpp  JavaScriptExtender.h  JavaScriptFactory.cpp  JavaScriptFactory.h  JavaScriptObject.cpp  JavaScriptObject.h  MenuInfo.cpp  MenuInfo.h  SchemeExtender.cpp  SchemeExtender.h  SchemePost.h  SchemeRequest.cpp  SchemeRequest.h  cef_refcount_wrapper.h
src/shared/uicore/: uicore.vcxproj  uicore.vcxproj.filters
src/shared/uicore/code/: ChromiumMenuInfoFromMem.h  ItemTabPage.cpp  gcSchemeBase.h  gcWCEvents.h  gcWCUtil.cpp  gcWebControl.cpp  gcWebFakeBrowser.h
src/shared/utilcore/code/: Browser.cpp
src/shared/webcore/code/: WebCoreMain.cpp
src/static/scriptengine/code/: jsExtensions.cpp
src/static/umcf/: umcf.vcxproj
src/static/wx_controls/code/: gcTaskBar.cpp
